update build to use Java 11 for build setting release=8 to enable execution using Java 8 runtime